Fixed the calculations not showing without navigating a maze.

--- a/static/vector2d/css/vector_addition_calculator/vector_addition_calculator.css
+++ b/static/vector2d/css/vector_addition_calculator/vector_addition_calculator.css
@@ -70,3 +70,13 @@ button:hover {
 
 #output-div > div {
 }
+
+#steps-div[data-active="true"] {
+    display: block;
+    border: 1px solid black;
+}
+
+#steps-div[data-active="false"] {
+    display: none;
+    border-style: hidden;
+}
